# facturx-fr

./: .gitignore  README.md  pyproject.toml
docs/: django_integration.md  formats.md  getting_started.md  pdp_integration.md
src/facturx_fr/: __init__.py  cli.py
src/facturx_fr/contrib/: __init__.py
src/facturx_fr/contrib/django/: __init__.py  admin.py  apps.py  conf.py  models.py  serializers.py  tasks.py  urls.py  views.py
src/facturx_fr/contrib/django/migrations/: 0001_initial.py
src/facturx_fr/contrib/fastapi/: __init__.py  dependencies.py
src/facturx_fr/ereporting/: __init__.py  errors.py  models.py  reporter.py
src/facturx_fr/generators/: __init__.py  base.py  cii.py  facturx.py  ubl.py
src/facturx_fr/lifecycle/: __init__.py  cdar.py  manager.py
src/facturx_fr/models/: __init__.py  enums.py  invoice.py  party.py  payment.py
src/facturx_fr/pdp/: __init__.py  base.py  errors.py  models.py
src/facturx_fr/pdp/connectors/: __init__.py  memory.py
src/facturx_fr/utils/: __init__.py  xml_helpers.py
src/facturx_fr/validators/: __init__.py  schematron.py  xsd.py
tests/: conftest.py
tests/test_contrib/django/: conftest.py  test_conf.py  test_models.py
tests/test_ereporting/: __init__.py  conftest.py  test_errors.py  test_models.py  test_reporter.py
tests/test_generators/: test_cii.py  test_ubl.py
tests/test_lifecycle/: __init__.py  test_cdar.py  test_manager.py
tests/test_pdp/: conftest.py  test_errors.py  test_memory.py  test_models.py
tests/test_validators/: test_schematron.py  test_xsd.py
